# gtm-wizard

./: .gitignore  ARCHIVE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/skills/gtm-wizard-architecture/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: NEXT_SESSION_PROMPT.md
docs/00_vision/: ARCHITECTURE.md  NOVEL_CONTRIBUTION.md  PRICING_MODEL.md  VISION_STATEMENT.md
docs/01_research/: PAIN_POINTS.md  RESEARCH_SUMMARY.md  TARGET_SEGMENT.md
docs/02_planning/: MVP_SCOPE.md  OSS_STACK_RESEARCH.md  TOOL_API_STRATEGY.md
docs/03_decisions/: ADR_001_Combined_Vision.md
docs/_planning_v1_archived/: 00_INDEX.md
docs/_planning_v1_archived/01_vision/: MISSION.md  PRINCIPLES.md  VISION.md
docs/_planning_v1_archived/03_product/: REQUIREMENTS.md  SUCCESS_METRICS.md  USE_CASES.md
docs/_planning_v1_archived/04_decisions/: ADR_001_form_factor.md  ADR_002_target_user.md  ADR_003_business_model.md
docs/_planning_v1_archived/05_roadmap/: DEVELOPMENT_PHASES.md  MILESTONES.md
docs/session_handoffs/: SESSION_2025-12-29_Phase1_Foundation.md  SESSION_2025-12-29_Skills_and_Docs.md  SESSION_2025-12-29_Stack_and_Restructure.md  SESSION_2025-12-29_Vision_Defined.md
pocketbase/: pb_schema.json
src/gtm_wizard/: server.py
tests/: conftest.py  test_tools.py
