[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtm-wizard"
version = "0.1.0"
description = "MCP server packaging Go-To-Market Engineering expertise for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mathew Joseph", email = "mathew@example.com" }
]
keywords = [
    "mcp",
    "go-to-market",
    "gtm",
    "sales-automation",
    "lead-qualification",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MathewJoseph1993/gtm-wizard"
Repository = "https://github.com/MathewJoseph1993/gtm-wizard"
Documentation = "https://gtmwizard.io"

[project.scripts]
gtm-wizard = "gtm_wizard.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_wizard"]
